Cycles: Rendering from CLI with subframes enabled results into wrong frame numbers. #96263

Closed
opened 2022-03-09 16:38:07 +01:00 by Raimund Klink · 10 comments
Contributor

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: Blender 2.93/ 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181, Blender 3.1, Blender 3.2
Worked: Do not know, sorry

Short description of error
Rendering frame 80 via CLI leads to frame 79 as output.
Disabling subframes seems to fix it.

Exact steps for others to reproduce the error

  1. Open the scene once.
  2. Render with .\blender.exe -b --open-last -f 80
  3. It should result into frame 79
  4. Disable subframes (bpy.context.scene.show_subframe = False)
  5. Save
  6. Render again with .\blender.exe -b --open-last -f 80
  7. It should now render frame 80 as expected
    noOutputfile.blend
    Sorry, I couldn't create a scene where it happens from scratch :(
    I got the .blend from a user.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: Blender 2.93/ 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181`, Blender 3.1, Blender 3.2 Worked: Do not know, sorry **Short description of error** Rendering frame 80 via CLI leads to frame 79 as output. Disabling subframes seems to fix it. **Exact steps for others to reproduce the error** 1. Open the scene once. 2. Render with `.\blender.exe -b --open-last -f 80` 3. It should result into frame 79 4. Disable subframes (`bpy.context.scene.show_subframe = False`) 5. Save 6. Render again with `.\blender.exe -b --open-last -f 80` 7. It should now render frame 80 as expected [noOutputfile.blend](https://archive.blender.org/developer/F12914036/noOutputfile.blend) Sorry, I couldn't create a scene where it happens from scratch :( I got the .blend from a user.
Author
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Added subscriber: @randomGuyOnTheInternet

Added subscriber: @randomGuyOnTheInternet
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

I can confirm with provided file but unable to reproduce for the file created from scratch.
I'll let developers to decide if this is a bug or not.

I can confirm with provided file but unable to reproduce for the file created from scratch. I'll let developers to decide if this is a bug or not.

This issue was referenced by 19bff8eb51

This issue was referenced by 19bff8eb51f2d462f665a559c0f6934fbe154c1a
Author
Contributor

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht
Author
Contributor

Maybe @brecht or @Sergey can help to identify the priority of this bug?

Maybe @brecht or @Sergey can help to identify the priority of this bug?

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-03-15 16:29:18 +01:00
Author
Contributor

Thank you brecht for fixing it so fast :)

Thank you brecht for fixing it so fast :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96263
No description provided.