Fix T96263: command line rendering affected by current scene subframe